[package]
name = "closure_calculus"
version = "0.1.0"
authors = ["Sven Nilsen <bvssvni@gmail.com>"]
edition = "2018"
description = "An implementation of Closure Calculus"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/advancedresearch/closure_calculus.git"
homepage = "https://github.com/advancedresearch/closure_calculus"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[dependencies]
